# rscel

./: .gitignore  AGENTS.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  Makefile  README.md  USAGE.md  build.rs  build_wasm_pkg.sh  pytest.ini  rust-toolchain.toml
.cargo/: config.toml
.github/workflows/: ci.yml  rust.yml
examples/: bench.rs  eval.py  prog2json.rs
examples/wasm/: .babelrc  package-lock.json  package.json  webpack.config.js
examples/wasm/src/: app.tsx  index.js
examples/wasm/src/components/: CelComponent.tsx  UnitTest.tsx  UnitTests.tsx  testCases.ts
examples/wasm/src/pages/: CelComponent.tsx
extensions/to_sql/: Cargo.toml
extensions/to_sql/examples/: cel2sql.rs
extensions/to_sql/src/: ast.rs  error.rs  grammar.rs  lib.rs  traits.rs
python/: Cargo.toml  eval.py  pyproject.toml  rscel.pyi
python/examples/: eval.py
python/src/: cel_py_object.rs  celpycallable.rs  frompyobject.rs  lib.rs  py_bind_context.rs  py_cel_context.rs  py_cel_error.rs  py_cel_program.rs  py_cel_value.rs
rscel/: Cargo.toml  README.md  build.rs
rscel-macro/: Cargo.toml
rscel-macro/src/: lib.rs  types.rs
rscel-macro/src/types/: dispatch_arg.rs  dispatch_arg_type.rs  dispatch_func.rs  dispatch_mod.rs
rscel/examples/: bench.rs  dumps_ast.rs  dumps_bc.rs  eval.rs  explain.rs
rscel/src/: cel_value.rs  cel_value_dyn.rs  lib.rs
rscel/src/bindings/: mod.rs
rscel/src/compiler/: ast_node.rs  compiled_node.rs  compiled_prog.rs  compiler.rs  grammar.rs  input_scanner.rs  mod.rs  source_location.rs  source_range.rs  string_scanner.rs  string_tokenizer.rs  syntax_error.rs  tokenizer.rs  tokens.rs
rscel/src/compiler/compiled_prog/: preresolved.rs
rscel/src/compiler/compiler/: pattern_utils.rs
rscel/src/context/: bind_context.rs  default_funcs.rs  default_macros.rs  mod.rs  type_funcs.rs
rscel/src/context/default_funcs/: contains.rs  contains_i.rs  math.rs  size.rs  sort.rs  starts_with.rs  string.rs  time_funcs.rs  uom.rs
rscel/src/context/default_funcs/math/: abs.rs  ceil.rs  floor.rs  lg.rs  log.rs  pow.rs  round.rs  sqrt.rs
rscel/src/context/default_funcs/string/: ends_with.rs  match_captures.rs  match_replace.rs  match_replace_once.rs  matches.rs  remove.rs  replace.rs  split.rs  split_whitespace.rs  starts_with.rs  trim_end_matches.rs  trim_start_matches.rs
rscel/src/context/default_funcs/time_funcs/: get_date.rs  get_day_of_month.rs  get_day_of_week.rs  get_day_of_year.rs  get_full_year.rs  get_hours.rs  get_milliseconds.rs  get_minutes.rs  get_month.rs  get_seconds.rs  helpers.rs
rscel/src/context/default_macros/: all.rs  coalesce.rs  exists.rs  exists_one.rs  filter.rs  has.rs  helpers.rs  map.rs  reduce.rs
rscel/src/context/type_funcs/: bool_type.rs  bytes_type.rs  double_type.rs  duration_type.rs  dyn_type.rs  int_type.rs  string_type.rs  timestamp_type.rs  type_type.rs  uint_type.rs
rscel/src/interp/: interp.rs  mod.rs  types.rs
rscel/src/interp/types/: bytecode.rs  celstackvalue.rs  rscallable.rs
rscel/src/program/: mod.rs  program_details.rs
rscel/src/sql/: functions.rs  mod.rs
rscel/src/sql/tests/: mod.rs
rscel/src/tests/: general_tests.rs  mod.rs  neg_index_tests.rs  proto_tests.rs  sql_fn_tests.rs  type_prop_tests.rs  uom_tests.rs
rscel/src/types/: cel_byte_code.rs  cel_bytes.rs  cel_value.rs  cel_value_arc.rs  mod.rs
rscel/src/utils/: eval_utils.rs  ident_filter.rs  mod.rs  scoped_counter.rs
src/: cel_error.rs  cel_value.rs  cel_value_dyn.rs  context.rs  lib.rs  macros.rs  parser.rs  value_cell.rs
src/ast/: grammar.rs  mod.rs  serialize.rs
src/bindings/python/: celpycallable.rs  frompyobject.rs  mod.rs
src/bindings/wasm/: eval_error.rs  from_jsvalue.rs  into_jsvalue.rs  mod.rs  object_iter.rs  utils.rs
src/compiler/: ast_node.rs  compiled_node.rs  compiler.rs  grammar.rs  input_scanner.rs  lexer.rs  mod.rs  parse_result.rs  parser.rs  string_tokenizer.rs  syntax_error.rs  tokenizer.rs  tokens.rs
src/compiler/types/: ast.rs  errors.rs  lexicons.rs  mod.rs  parser.rs
src/context/: bind_context.rs  default_funcs.rs  default_macros.rs  exec_context.rs  mod.rs  type_funcs.rs  utils.rs
src/interp/: mod.rs  types.rs
src/parser/: grammar.rs  input_scanner.rs  mod.rs  parser.rs  syntax_error.rs  tokenizer.rs  tokens.rs
src/program/: compile.rs  eval.rs  mod.rs  program_cache.rs  program_details.rs  program_error.rs
src/tests/: general_tests.rs  mod.rs  proto_tests.rs  type_prop_tests.rs
src/types/: lexicons.rs  mod.rs
src/utils/: eval_utils.rs  ident_filter.rs  mod.rs  scoped_counter.rs
test/: test_cel_spec.py  test_rscel.py
test/cel_spec_tests/proto/: simple_pb2.py  test_all_types_proto2_pb2.py
test/cel_spec_tests/proto/google/api/expr/v1alpha1/: eval_pb2.py  explain_pb2.py  value_pb2.py
test/cel_spec_tests/proto/test/v1/proto3/: test_all_types_pb2.py
test/google/api/expr/v1alpha1/: checked_pb2.py  syntax_pb2.py
test/protos/: test.proto
wasm/: Cargo.toml  LICENSE_MIT  Makefile
wasm/example/: package-lock.json  package.json  webpack.config.js
wasm/example/src/: app.tsx  index.html  index.js
wasm/example/src/components/: CelComponent.css  CelComponent.tsx  UnitTest.tsx  UnitTests.tsx  testCases.ts
wasm/src/: bind_context.rs  cel_context.rs  cel_js_callable.rs  cel_program.rs  eval_error.rs  eval_result.rs  from_jsvalue.rs  into_jsvalue.rs  lib.rs  object_iter.rs  types.rs  wasm_program_details.rs
wasm/src/types/: api.rs  details_result.rs  eval_error.rs  eval_result.rs  wasm_binding.rs  wasm_cel_details.rs  wasm_cel_error.rs  wasm_cel_value.rs  wasm_program_details.rs
wasm/tests/: package-lock.json  package.json  rscel.test.js
