[workspace]
members = [
  "rscel",
  "python",
  "wasm"
]
default-members = ["rscel"]
resolver="2"

[workspace.package]
version = "1.0.0"
edition = "2021"
description = "Cel interpreter in rust"
license = "MIT"

[profile.release-with-debug]
inherits = "release"
debug = true
lto = false

[profile.release]
lto = true

[workspace.dependencies]
chrono = { version = "0.4.38", features = ["serde"] }
serde_json = { version = "1.0.115", features = ["raw_value"] }

