[workspace]
members = ["rscel", "python", "wasm", "rscel-macro"]
default-members = ["rscel"]
resolver = "2"

[workspace.package]
version = "1.0.6"
edition = "2021"
description = "Cel interpreter in rust"
license = "MIT"

[profile.release-with-debug]
inherits = "release"
debug = true
lto = false

[profile.release]
lto = true

[workspace.dependencies]
chrono = { version = "0.4.39", features = ["serde"] }
serde_json = { version = "1.0.138", features = ["raw_value"] }
