[package]
name = "rscel_python"
version = "1.0.0"
edition = "2021"
description = "Python bindings for the rscel package"
license = "MIT"

[lib]
name = "rscel"
crate-type = ["cdylib"]

[profile.release]
lto = true

[dependencies]
rscel = { path = "../rscel" }
pyo3 = { version = "0.21.2", features = ["extension-module", "chrono"] }
chrono = { workspace = true }
serde_json = { workspace = true } 
bincode = "1.3.3"

[build-dependencies]
pyo3-build-config = "0.21.2"
