[package]
name = "rscel_python"
version = { workspace = true }
edition = { workspace = true }
description = "Python bindings for the rscel package"
license = { workspace = true }

[lib]
name = "rscel"
crate-type = ["cdylib"]

[dependencies]
rscel = { path = "../rscel" }
pyo3 = { version = "0.21", features = ["extension-module", "chrono"] }
chrono = { workspace = true }
serde_json = { workspace = true }
bincode = "1.3.3"

[build-dependencies]
pyo3-build-config = "0.21"
