[package]
name = "rscel-macro"
version = { workspace = true }
edition = { workspace = true }
description = { workspace = true }
license = { workspace = true }
readme = "../README.md"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.92"
quote = "1.0.37"
syn = { version = "2.0.91", features = ["full"] }
