[package]
name = "rscel-macro"
version = { workspace = true }
edition = { workspace = true }
description = { workspace = true }
license = { workspace = true }
readme = "../README.md"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.93"
quote = "1.0.38"
syn = { version = "2.0.98", features = ["full"] }
