[package]
name = "rscel"
version = "1.0.0"
edition = "2021"
description = "Cel interpreter in rust"
license = "MIT"

[features]
default = ["type_prop", "protobuf"]
ast_ser = []
debug_output = []
type_prop = []
protobuf = ["dep:protobuf"]

[build-dependencies]
protobuf-codegen = { version = "3.4.0" }
protoc-bin-vendored = { version = "3.0.0" }

[dependencies]
test-case = "3.3.1"
regex = "1.10.4"
serde = { version = "1.0.197", features = ["derive", "rc"] }
serde_with = { version = "3.7.0", features = ["chrono"] }
serde_json = { workspace = true }
chrono = { workspace = true }
duration-str = "0.7.1"
protobuf = { version = "3.4.0", optional=true }
chrono-tz = "0.9.0"
num-traits = "0.2.18"
