[package]
name = "rscel"
version = { workspace = true }
edition = { workspace = true }
description = { workspace = true }
license = { workspace = true }

[features]
default = ["type_prop", "protobuf"]
ast_ser = []
debug_output = []
type_prop = []
protobuf = ["dep:protobuf"]

[build-dependencies]
protobuf-codegen = { version = "3.4.0" }
protoc-bin-vendored = { version = "3.0.0" }

[dependencies]
rscel-macro = { path = "../rscel-macro", version = "1.0.4" }
test-case = "3.3.1"
regex = "1.10.5"
serde = { version = "1.0.204", features = ["derive", "rc"] }
serde_with = { version = "3.9.0", features = ["chrono"] }
serde_json = { workspace = true }
chrono = { workspace = true }
duration-str = "0.11.2"
protobuf = { version = "3.5.0", optional = true }
chrono-tz = "0.9.0"
num-traits = "0.2.19"
