[package]
name = "rscel_wasm"
version = { workspace = true }
edition ={ workspace = true }
description = "Wasm bindings for RsCEL"
license = { workspace = true }

[lib]
crate-type = ["cdylib"]

[features]
console_error_panic_hook = ["dep:console_error_panic_hook"]

[dependencies]
rscel = { path = "../rscel" }
num = "0.4.2"
wasm-bindgen = "0.2.92"
console_error_panic_hook = {version = "0.1.7", optional = true}
serde-wasm-bindgen = "0.6.5"
js-sys = "0.3.68"
chrono = { workspace = true }
